@startuml
abstract class edu.unsis.model.entity.People
abstract class edu.unsis.model.entity.Product
annotation java.lang.Override
class edu.unsis.model.entity.Credentials
class edu.unsis.model.entity.Expired
class edu.unsis.model.entity.NotExpired
class edu.unsis.model.entity.Sale
class edu.unsis.model.entity.User
edu.unsis.model.entity.People ..> java.lang.Override
edu.unsis.model.entity.Product ..> java.lang.Override
edu.unsis.model.entity.Credentials ..> java.lang.Override
edu.unsis.model.entity.Expired --|> edu.unsis.model.entity.Product
edu.unsis.model.entity.Expired ..> java.lang.Override
edu.unsis.model.entity.NotExpired --|> edu.unsis.model.entity.Product
edu.unsis.model.entity.NotExpired ..> java.lang.Override
edu.unsis.model.entity.User --|> edu.unsis.model.entity.People
edu.unsis.model.entity.User ..> java.lang.Override
@enduml